--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,13 +3,15 @@
 .rechercher {
   display: flex;
 }
-.standard{
+
+.standard {
   width: 95%;
   margin-left: auto;
   margin-right: auto;
   height: 100%;
   background-color: white;
 }
+
 .dont {
   max-height: 700px;
   height: 450px;
@@ -18,8 +20,8 @@
 }
 
 .img {
-  height: 100%;
-  width: auto;
+  max-width: 100%;
+  max-height: 100%;
   display: block;
   align-self: middle;
   margin-left: auto;
@@ -29,8 +31,7 @@
 .info {
   background: linear-gradient(to left, grey, #9DBFAF);
   display: flex;
-  height: 50vh;
-  text-align: center;
+  //  text-align: center;
 }
 
 .c1 {
@@ -88,12 +89,13 @@
   width: auto;
   background-color: transparent;
 }
-.slideshow{
-margin-left: auto;
-margin-right: auto;
-height: 400px;
-width: 100%;
-display: block;
+
+.slideshow {
+  margin-left: auto;
+  margin-right: auto;
+  height: 400px;
+  width: 100%;
+  display: block;
 }
 
 
@@ -112,6 +114,7 @@ footer {
   margin-right: auto;
   font-size: xx-small;
 }
+
 .foot1 {
   display: flex;
   flex-direction: row;
