--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,7 +5,7 @@ abe-header {
   mat-toolbar {
     width: 100%;
   }
-  
+
   @media (min-width: map-get($grid-breakpoints, sm)) {
     mat-toolbar {
       width: 80%;
@@ -29,8 +29,12 @@ a {
 }
 
 .img {
-height: 50%;
-width: auto;
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  align-self: middle;
+  margin-left: auto;
+  padding-top: 10%;
 }
 
 .row2 {
